--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <div class="socialMedia" id="socialMedia">
                 <ul class="navbar-nav flex-row ms-md-auto justify-content-flex-end">                  
                     <li class="nav-item">
-                        <a href="https://www.behance.net/soleadadpriano" target="blank"><i class="fab fa-behance-square"></i></a>
+                        <a href="https://www.behance.net/soledadpriano" target="blank"><i class="fab fa-behance-square"></i></a>
                     </li>
                     <li class="nav-item">
                         <a href="https://www.linkedin.com/in/soledad-priano/" target="blank"><i class="fab fa-linkedin"></i></a>
@@ -138,7 +138,7 @@
         <!--=========Encabezado=========-->
         <section  id="title" class="title container-fluid">
             <h1 class="name">Soledad Priano</h1>
-            <h2 class="subName">Industrial designer</h2>
+            <h2 class="subName">Industrial Design & Manufacturing</h2>
         </section>
         <!--=========FIN Encabezado=========-->
 
@@ -152,7 +152,7 @@
                 </div>
                 <div class="row">
                     <p class="parra">
-                        Hello I’m <strong class="sole">Sole</strong>, and I am an Industrial designer who loves
+                        Hello I’m <strong class="sole">Sole</strong>, and I am an Industrial Design & Manufacturing who loves
                             to accept challenges every day. In this portfolio you’ll find 
                             a vast example of my work: simple sketches, complex prototypes and models.
                     </p>
@@ -243,6 +243,21 @@
                         <div class="col-sm-6 col-md-3 col-lg-3 gallery-image web">
                             <div class="portfolio-item">
                                 <div class="hover-bg"> 
+                                        <img src="img/Portfolio/RD.JPG" class="img-responsive" alt="Manufacturing Design Engineering">
+                                        <div class="cap1">
+                                            <h3>Manufacturing Design Engineering</h3>
+                                            <p>Research and development (R&D)</p>
+                                        </div>
+                                        <div class="cap2">
+                                            <a href="https://solep.github.io/RD/"  target="blank"><p class="text-center">See more</p></a>
+                                        </div>
+                                </div>
+                            </div>
+                        </div>
+                        
+                        <div class="col-sm-6 col-md-3 col-lg-3 gallery-image web">
+                            <div class="portfolio-item">
+                                <div class="hover-bg"> 
                                         <img src="img/Portfolio/APL-01.JPG" class="img-responsive" alt="Vertigo: window cleanning sistem">
                                         <div class="cap1">
                                             <h3>Arte Para Llevar</h3>
@@ -253,22 +268,7 @@
                                         </div>
                                 </div>
                             </div>
-                        </div>
-
-                        <div class="col-sm-6 col-md-3 col-lg-3 gallery-image web">
-                            <div class="portfolio-item">
-                                <div class="hover-bg"> 
-                                        <img src="img/Portfolio/Deli-01.jpg" class="img-responsive" alt="Vertigo: window cleanning sistem">
-                                        <div class="cap1">
-                                            <h3>Delicatessen</h3>
-                                            <p>Design & Develop of Menu</p>
-                                        </div>
-                                        <div class="cap2">
-                                            <a href="deli-En.html"  target="blank"><p class="text-center">See more</p></a>
-                                        </div>
-                                </div>
-                            </div>
-                        </div>
+                        </div>              
 
                         <div class="col-sm-6 col-md-3 col-lg-3 gallery-image prototype model stand metal">
                             <div class="portfolio-item">
@@ -454,7 +454,7 @@
             <div class="footer-top container">
                 <div class="footer-contact">
                     <h4>Soledad Priano</h4>
-                    <p>Industrial Designer</p>
+                    <p>Industrial Design & Manufacturing | CAD Specialist </p>
                     <strong>Email:</strong> soledadpriano@gmail.com <br>
                 </div>
             </div>          
