--- a/index.html
+++ b/index.html
@@ -243,13 +243,13 @@
                         <div class="col-sm-6 col-md-3 col-lg-3 gallery-image web">
                             <div class="portfolio-item">
                                 <div class="hover-bg"> 
-                                        <img src="img/Portfolio/RD.JPG" class="img-responsive" alt="Manufacturing Design Engineering">
+                                        <img src="img/Portfolio/RD/RD-18.jpg" class="img-responsive" alt="Manufacturing Design Engineering">
                                         <div class="cap1">
                                             <h3>Manufacturing Design Engineering</h3>
                                             <p>Research and development (R&D)</p>
                                         </div>
                                         <div class="cap2">
-                                            <a href="https://solep.github.io/RD/"  target="blank"><p class="text-center">See more</p></a>
+                                            <a href="RD-EN.html"  target="blank"><p class="text-center">See more</p></a>
                                         </div>
                                 </div>
                             </div>
