--- a/RD-EN.html
+++ b/RD-EN.html
@@ -91,7 +91,7 @@
                         </a> 
                         <ul class="dropdown-menu dropdown-menu-dark bg-dark" aria-labelledby="navbarDropdownMenuLink">
                             <li><a class="dropdown-item" href="https://solep.github.io/ArteParaLlevar/" target="blank">Arte Para Llevar</a></li>
-                            <li><a class="dropdown-item" href="deli.html">Delicatessen</a></li>
+                            <li><a class="dropdown-item" href="RD-EN.html">Manufacturing Design Engineering</a></li>
                             <li><a class="dropdown-item" href="vertigo-EN.html">Vertigo</a></li>
                             <li><a class="dropdown-item" href="cva-EN.html">CVA SA</a></li>
                             <li><a class="dropdown-item" href="interieur-EN.html">Interieur Forma</a></li>
@@ -225,7 +225,14 @@
                                 <h3>Manufacturing Design Engineering</h3>
                                 <ul>
                                     <li><strong>Category</strong>: Sheet Metal, Assemblies & Technical Drawings / 3D model</li>
-                                    <li><strong>Client</strong>: Manufacturing Design Engineering</li>
+                                    <li><strong>Client</strong>: PWR Australia</li>
+                                    <li><strong>Description</strong>:This series of images showcases various mechanical design projects developed in SolidWorks, focusing on real-world manufacturing applications.
+Sheet Metal Parts: 3D models designed using SolidWorks’ sheet metal tools, featuring proper bend reliefs, flanges, and flat patterns. These parts were modeled with manufacturability in mind, allowing for accurate unfolding and CNC cutting or laser fabrication.
+2D Technical Drawings: Fully dimensioned and toleranced drawings prepared for production. These include views, sections, detail annotations, and bend tables for sheet metal parts.
+Assemblies: Parametric assemblies that show the relationship between parts, including exploded views, motion studies, and Bill of Materials (BOM) integration.
+Drawing Packs for Fabrication: Organized drawing sets used to communicate directly with workshops or suppliers, ensuring seamless production processes.
+These images reflect a solid understanding of CAD design principles, technical drawing standards (ISO/ASME), and best practices in engineering documentation. The work demonstrates both mechanical design proficiency and attention to detail across the full design-to-manufacturing workflow.
+</li>
                                     <li><strong>Technologies used</strong>: Solidworks - Autocad </li>
                                 </ul>
                             </div>
