--- a/RD-EN.html
+++ b/RD-EN.html
@@ -115,7 +115,7 @@
             <div class="socialMedia" id="socialMedia">
                 <ul class="navbar-nav flex-row ms-md-auto justify-content-flex-end">                  
                     <li class="nav-item">
-                        <a href="https://www.behance.net/soleadadpriano" target="blank"><i class="fab fa-behance-square"></i></a>
+                        <a href="https://www.behance.net/soledadpriano" target="blank"><i class="fab fa-behance-square"></i></a>
                     </li>
                     <li class="nav-item">
                         <a href="https://www.linkedin.com/in/soledad-priano/" target="blank"><i class="fab fa-linkedin"></i></a>
