--- a/portfolio-EN.html
+++ b/portfolio-EN.html
@@ -91,7 +91,7 @@
                         </a> 
                         <ul class="dropdown-menu dropdown-menu-dark bg-dark" aria-labelledby="navbarDropdownMenuLink">
                             <li><a class="dropdown-item" href="https://solep.github.io/ArteParaLlevar/" target="blank">Arte Para Llevar</a></li>
-                            <li><a class="dropdown-item" href="dRD-EN.html">Manufacturing Design Engineering</a></li>
+                            <li><a class="dropdown-item" href="RD-EN.html">Manufacturing Design Engineering</a></li>
                             <li><a class="dropdown-item" href="vertigo-EN.html">Vertigo</a></li>
                             <li><a class="dropdown-item" href="cva-EN.html">CVA SA</a></li>
                             <li><a class="dropdown-item" href="interieur-EN.html">Interieur Forma</a></li>
@@ -154,13 +154,13 @@
                  <div class="col-sm-6 col-md-3 col-lg-3 gallery-image web">
                     <div class="portfolio-item">
                         <div class="hover-bg"> 
-                                <img src="img/Portfolio/RD-01.JPG" class="img-responsive" alt="Engineering design">
+                                <img src="iimg/Portfolio/RD/RD-18.jpg" class="img-responsive" alt="Engineering design">
                                 <div class="cap1">
                                     <h3>Engineering Design</h3>
                                     <p>Research and development (R&D)</p>
                                 </div>
                                 <div class="cap2">
-                                    <a href="https://solep.github.io/RD/"  target="blank"><p class="text-center">See more</p></a>
+                                    <a href="RD-EN.html"  target="blank"><p class="text-center">See more</p></a>
                                 </div>
                         </div>
                     </div>
